--- a/less/home-page.less
+++ b/less/home-page.less
@@ -69,6 +69,9 @@
 			border: 1px solid blue;
 			padding: 10px;
 			border-radius: 5px;
+			.responsive(@mobile; {
+				width: 100%;
+			})
 		}
 	}
 }
